syntax = "proto3";

package system.organization.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "openapi/v3/annotations.proto";

option go_package = "quest-admin/api/organization/v1;v1";


option (openapi.v3.document) = {
  tags: [
    {
      name: "DepartmentService";
      description: "部门相关操作";
    }
  ];
};

service DepartmentService {
  // 创建部门
  rpc CreateDepartment (CreateDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/qs/v1/organizations/department/create"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "创建部门";
      description: "创建一个新的部门";
    };
  }

  // 获取部门信息
  rpc GetDepartment (GetDepartmentRequest) returns (GetDepartmentReply) {
    option (google.api.http) = {
      get: "/qs/v1/organizations/department/get"
    };
    option (openapi.v3.operation) = {
      summary: "获取部门详细信息";
      description: "根据部门ID获取部门的详细信息";
    };
  }

  // 获取部门树
  rpc GetDepartmentTree (google.protobuf.Empty) returns (GetDepartmentTreeReply) {
    option (google.api.http) = {
      get: "/qs/v1/organizations/department/tree"
    };
    option (openapi.v3.operation) = {
      summary: "获取部门树";
      description: "获取完整的部门树结构";
    };
  }

  // 更新部门信息
  rpc UpdateDepartment (UpdateDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/qs/v1/organizations/department/update"
      body: "*"
    };
    option (openapi.v3.operation) = {
      summary: "更新部门信息";
      description: "更新部门的基本信息";
    };
  }

  // 删除部门
  rpc DeleteDepartment (DeleteDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/qs/v1/organizations/department/delete"
    };
    option (openapi.v3.operation) = {
      summary: "删除部门";
      description: "删除部门，此操作不可逆";
    };
  }
}

message DepartmentInfo {
  option (openapi.v3.schema) = {
    description: "部门的基本信息";
  };
  string id = 1 [(openapi.v3.property) = {description: "部门唯一标识符"; example: {yaml: "123456789"};}];
  string name = 2 [(openapi.v3.property) = {description: "部门名称"; example: {yaml: "技术部"};}];
  string parent_id = 3 [(openapi.v3.property) = {description: "父部门ID，根部门为空"; example: {yaml: "0"};}];
  int32 sort = 4 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"};}];
  string leader_user_id = 5 [(openapi.v3.property) = {description: "部门负责人用户ID"; example: {yaml: "user123"};}];
  string phone = 6 [(openapi.v3.property) = {description: "联系电话"; example: {yaml: "13800138000"};}];
  string email = 7 [(openapi.v3.property) = {description: "联系邮箱"; example: {yaml: "tech@example.com"};}];
  int32 status = 8 [(openapi.v3.property) = {description: "部门状态: 0-禁用, 1-正常"; example: {yaml: "1"};}];
  google.protobuf.Timestamp create_at = 9 [(openapi.v3.property) = {description: "创建时间";}];
  google.protobuf.Timestamp update_at = 10 [(openapi.v3.property) = {description: "更新时间";}];
  string tenant_id = 11 [(openapi.v3.property) = {description: "租户ID";}];
  repeated DepartmentInfo children = 12 [(openapi.v3.property) = {description: "子部门列表";}];
}

message CreateDepartmentRequest {
  option (openapi.v3.schema) = {
    description: "创建部门请求体";
  };
  optional string name = 1 [(openapi.v3.property) = {description: "部门名称"; example: {yaml: "技术部"};}];
  optional string parent_id = 2 [(openapi.v3.property) = {description: "父部门ID"; example: {yaml: "0"};}];
  optional int32 sort = 3 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"};}];
  optional string leader_user_id = 4 [(openapi.v3.property) = {description: "部门负责人用户ID"; example: {yaml: "user123"};}];
  optional string phone = 5 [(openapi.v3.property) = {description: "联系电话"; example: {yaml: "13800138000"};}];
  optional string email = 6 [(openapi.v3.property) = {description: "联系邮箱"; example: {yaml: "tech@example.com"};}];
}

message GetDepartmentRequest {
  option (openapi.v3.schema) = {
    description: "获取部门信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "部门ID"; example: {yaml: "123456789"};}];
}

message GetDepartmentReply {
  option (openapi.v3.schema) = {
    description: "获取部门信息响应体";
  };
  DepartmentInfo department = 1 [(openapi.v3.property) = {description: "部门详细信息";}];
}

message GetDepartmentTreeReply {
  option (openapi.v3.schema) = {
    description: "获取部门树响应体";
  };
  repeated DepartmentInfo departments = 1 [(openapi.v3.property) = {description: "部门树结构";}];
}

message UpdateDepartmentRequest {
  option (openapi.v3.schema) = {
    description: "更新部门信息请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "部门ID"; example: {yaml: "123456789"};}];
  optional string name = 2 [(openapi.v3.property) = {description: "部门名称"; example: {yaml: "技术部"};}];
  optional string parent_id = 3 [(openapi.v3.property) = {description: "父部门ID"; example: {yaml: "0"};}];
  optional int32 sort = 4 [(openapi.v3.property) = {description: "排序号"; example: {yaml: "1"};}];
  optional string leader_user_id = 5 [(openapi.v3.property) = {description: "部门负责人用户ID"; example: {yaml: "user123"};}];
  optional string phone = 6 [(openapi.v3.property) = {description: "联系电话"; example: {yaml: "13800138000"};}];
  optional string email = 7 [(openapi.v3.property) = {description: "联系邮箱"; example: {yaml: "tech@example.com"};}];
  optional int32 status = 8 [(openapi.v3.property) = {description: "部门状态: 0-禁用, 1-正常"; example: {yaml: "1"};}];
}

message DeleteDepartmentRequest {
  option (openapi.v3.schema) = {
    description: "删除部门请求体";
  };
  optional string id = 1 [(openapi.v3.property) = {description: "部门ID"; example: {yaml: "123456789"};}];
}
